# src/types/requests/list-users-query.model.ts
@@ -1,0 +1,6 @@
+export interface ListUsersQuery {
+  role?: string;
+  search?: string;
+  skip?: number;
+  take?: number;
+}
