# src/types/responses/user-list-item-response.model.ts
@@ -1,0 +1,13 @@
+export interface UserListItemResponse {
+  id: string;
+  email: string;
+  name: string;
+  lastName: string;
+  identifier: string | null;
+  isActive: boolean;
+  createdAt: string;
+  role: {
+    id: number;
+    name: string;
+  };
+}
